--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI</title>
+    <title>PLAN XXI - Home</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="title" content="Web site" />
@@ -50,7 +50,7 @@
             <div class="clear"></div>  
             <div> 
               <h1>Welcome to the Wonderful Website of PLAN!</h1>  
-              <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus. Join us to have fun, play games and win prizes.</p>
+              <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus. Join us October 10th to October 12th to have fun, play games and win prizes.</p>
 			  <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
             </div>  
           </div>  
