Event Page Update 1

--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Contact</title>
+    <title>PLAN XXI - Events</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="title" content="Web site" />
@@ -51,7 +51,7 @@
             <div> 
               <h1>404 Not Found</h1>  
 			  <p>Just Kidding.<br>We Just Haven't Finished This Page Yet.<br>It's Still Under Construction. Thank you for your patience :)</p>
-            </div> 
+			  <iframe src="https://www.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=1147&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=flqj4kkqdficavhqsv8ec1hr3c%40group.calendar.google.com&amp;color=%23060D5E&amp;ctz=America%2FNew_York&dates=20141006%2F20141012" style=" border-width:0 " width="920" height="1147" frameborder="0" scrolling="no"></iframe>            </div> 
           </div>  
           <div class="clear"></div> 
         </div>  
