--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,9 @@
   <body> 
     <!-- top wrapper -->  
     <div id="topWrapper"> 
-      <div id="topBanner"></div> 
+      <div id="topBanner">
+	<a href="./index.html"><img src="./images/css/transparent.png"></a>	
+	</div> 
     </div>  
     <div id="topnav"> 
       <ul>
