--- a/forum.html
+++ b/forum.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Signup</title>
+    <title>PLAN XXI - Events</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="title" content="Web site" />
@@ -21,9 +21,7 @@
   <body> 
     <!-- top wrapper -->  
     <div id="topWrapper"> 
-      <div id="topBanner">
-	<a href="./index.html"><img src="./images/css/transparent.png"></a>	
-	</div> 
+      <div id="topBanner"></div> 
     </div>  
     <div id="topnav"> 
       <ul>
@@ -33,13 +31,13 @@
         <li>
           <a href="./about.html" shape="rect">About</a>
         </li>
-        <li  id="current" style="border:none">
+        <li>
           <a href="./signup.html" shape="rect">Signup</a>
         </li>
 		<li>
 		  <a href="./events.html" shape="rect">Events</a>
 		</li>
-		<li>
+		<li  id="current" style="border:none">
 		  <a href="./forum.html" shape="rect">Forum</a>
 		</li>
         <li>
@@ -55,8 +53,10 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-				<iframe src="https://docs.google.com/forms/d/1Za-WsUa3urgfEZ9rDf9C-id__KBBC6ZmFLNkiCuDN7Y/viewform?embedded=true" width="920" height="2473" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            </div> 
+              <h1>PLAN Forum</h1>  
+			  <p>Our forum is being hosted in Google Groups. The embeded forum is below. You may have to sign in to a Google account to view or comment on this forum.</p>
+			  <iframe src="https://groups.google.com/forum/embed/?place=forum/ccowmu" style=" border-width:0 " width="920" height="1147" frameborder="0" scrolling="no"></iframe>        
+			  </div> 
           </div>  
           <div class="clear"></div> 
         </div>  
