--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,10 @@
         </li>
 		<li>
 		  <a href="./events.html" shape="rect">Events</a>
+		</li>
+		<li>
+		  <a href="./forum.html" shape="rect">Forum</a>
+		</li>
         <li  id="current" style="border:none">
           <a href="./contact.html" shape="rect">Contact</a>
         </li>
