Started to add event descriptions.

--- a/events.html
+++ b/events.html
@@ -55,8 +55,11 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-              <h1>404 Not Found</h1>  
-			  <p>Just Kidding.<br>We Just Haven't Finished This Page Yet.<br>It's Still Under Construction. Thank you for your patience :)</p>
+              <h1>Events and Tournaments</h1>  
+			  <p>The calendar for visual learners is at the bottom of this page. Scroll down to find it.<br>Regardless, here are the events and their info (in order of occurrence) for PLAN:</p>
+			   <p style="font-size:17px; color:#000000"><b>Team Fortress 2 Tournament</b></p>
+			  <p><b>WHEN:</b> Friday, October 10, 2014 starting at 7pm EST.<br><b>DETAILS:</b> The Team Fortress 2 Tournament teams can be reserved before-hand on this site or will be decided on an ad-hoc basis.<br>
+			  The tournament will be in the Highlander Format. If the teams are not of size 9, then each team may only have 1 of each class.</p>
 			  <iframe src="https://www.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=1147&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=flqj4kkqdficavhqsv8ec1hr3c%40group.calendar.google.com&amp;color=%234E5D6C&amp;ctz=America%2FNew_York&dates=20141006%2F20141012" style=" border-width:0 " width="920" height="1147" frameborder="0" scrolling="no"></iframe>            </div> 
           </div>  
           <div class="clear"></div> 
