--- a/forum.html
+++ b/forum.html
@@ -56,7 +56,7 @@
               <h1>PLAN Forum</h1>  
 			  <p>Our forum is being hosted in Google Groups. The embeded forum is below. You may have to sign in to a Google account to view or comment on this forum.</p>
 			  <iframe src="https://groups.google.com/forum/embed/?place=forum/ccowmu" style=" border-width:0 " width="920" height="1147" frameborder="0" scrolling="no" ></iframe>
-			  <script type="text/javascript">document.getElementById("forum_embed").src ="https://groups.google.com/forum/embed/?place=forum/ccowmu" +"&showsearch=true&showpopout=true&parenturl=" +encodeURIComponent(window.location.href);</script>
+			  <script type="text/javascript">document.getElementById("forum_embed").src ="https://groups.google.com/forum/embed/?place=forum/ccowmu" +"&showsearch=true&showpopout=true&parenturl=http://whatistheplan.com&domain=http://whatistheplan.com");</script>
 			  </div> 
           </div>  
           <div class="clear"></div> 
