--- a/forum.html
+++ b/forum.html
@@ -55,7 +55,7 @@
             <div> 
               <h1>PLAN Forum</h1>  
 			  <p>Our forum is being hosted in Google Groups. The embeded forum is below. You may have to sign in to a Google account to view or comment on this forum.</p>
-			  <iframe src="https://groups.google.com/forum/embed/?place=forum/ccowmu" style=" border-width:0 " width="920" height="1147" frameborder="0" scrolling="no" ></iframe>
+			  <iframe src="javascript:void(0)" style=" border-width:0 " width="920" height="1147" frameborder="0" scrolling="no" ></iframe>
 			  <script type="text/javascript">document.getElementById("forum_embed").src ="https://groups.google.com/forum/embed/?place=forum/ccowmu" +"&showsearch=true&showpopout=true&parenturl=http://whatistheplan.com&domain=http://whatistheplan.com");</script>
 			  </div> 
           </div>  
