--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- top wrapper -->  
     <div id="topWrapper"> 
       <div id="topBanner">
+        <a href="http://www.ccowmu.org"><img src="./images/css/trans.png"></a>
 	<a href="./index.html"><img src="./images/css/transparent.png"></a>
 	</div> 
     </div>  
