--- a/forum.html
+++ b/forum.html
@@ -21,7 +21,10 @@
   <body> 
     <!-- top wrapper -->  
     <div id="topWrapper"> 
-      <div id="topBanner"></div> 
+      <div id="topBanner">
+      	<a href="http://www.ccowmu.org"><img src="./images/css/trans.png"></a>
+	<a href="./index.html"><img src="./images/css/transparent.png"></a>
+      </div> 
     </div>  
     <div id="topnav"> 
       <ul>
