--- a/index.html
+++ b/index.html
@@ -59,6 +59,36 @@
               <h1>Welcome to the Wonderful Website of PLAN!</h1>  
               <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">October 10th to October 12th</b> to have fun, play games and win prizes.</p>
 			  <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
+              <h1>Announcements:</h1>
+              <style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+}
+</style>
+</head>
+
+<body>
+
+<table style="width:100%">
+  <tr>
+    <th>Date</th>
+    <th>Announcement</th>		
+  </tr>
+  <tr>
+    <td>9/23/2014</td>
+    <td>League of Legend Tournaments & CS:GO Take Place simultaneously, don't sign up for both!
+    </td>		
+  </tr>
+    <tr>
+    <td>9/22/2014</td>
+    <td>Free Jimmy Johns Samples will be provided!</td>
+    </td>		
+  </tr>
+</table>
             </div>  
           </div>  
           <div class="clear"></div> 
