--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
             <div class="clear"></div>  
             <div> 
               <h1>Events and Tournaments</h1>  
-              		  <p style="font-size:17px; color:#000000"><br><b>The Leauge of Legends Tournament and the CS:GO Tournament will take place simultaneously. Sorry:( br></b></p>
+              		  <p style="font-size:17px; color:#000000"><br><b>The Leauge of Legends Tournament and the CS:GO Tournament will take place simultaneously. Sorry:( <br></b></p>
 			  <p>The calendar for visual learners is at the bottom of this page. Scroll down to find it.
 			  <br>Times marked with Assorted Gaming indicate times during which the building/rooms will be open to the public.
 			  <br>Attendees are at liberty to entertain themselves during running tournaments once they have been eliminated or if they choose not to partake.
