--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@ th, td {
 
 <table style="width:100%">
   <tr>
-    <th>Date</th>
-    <th>Announcement</th>		
+    <th style="font-size:12px">Date</th>
+    <th style="font-size:12px">Announcement</th>		
   </tr>
   <tr>
-    <td>9/23/2014</td>
-    <td>League of Legend Tournaments & CS:GO Take Place simultaneously, don't sign up for both!
+    <td style="font-size:7px">9/23/2014</td>
+    <td style="font-size:7px">League of Legend Tournaments & CS:GO Take Place simultaneously, don't sign up for both!
     </td>		
   </tr>
     <tr>
-    <td>9/22/2014</td>
-    <td>Free Jimmy Johns Samples will be provided!</td>
+    <td style="font-size:7px">9/22/2014</td>
+    <td style="font-size:7px">Free Jimmy Johns Samples will be provided!</td>
     </td>		
   </tr>
 </table>
