--- a/events.html
+++ b/events.html
@@ -63,7 +63,7 @@
 			  <br>Attendees, however, are reminded that they may not be outside of the area we have set aside for PLAN.
 			  <br>Other rooms are allocated for alternative activities that may run during tournaments.
 			  <br>Regardless, here are the events and their info (in order of occurrence) for PLAN:</p>
-	   		  <p style="font-size:17px; color:#000000"><br><b>IMPORTANT: Tournaments will start when scheduled please arrive early to make sure you're signed in!</b></p>
+	   		  <p style="font-size:17px; color:#000000"><br><b>IMPORTANT: Tournaments will start when scheduled. Please arrive early to make sure you're signed in!</b></p>
               		  <p style="font-size:17px; color:#000000"><br><b>The Leauge of Legends Tournament and the CS:GO Tournament will take place simultaneously. Sorry:( <br></b></p>
 			   <p style="font-size:17px; color:#000000"><b>League of Legends Tournament</b></p>
 			  <p><b>WHEN:</b> Saturday, October 11, 2014 from 12pm EST until 12am EST.
