--- a/events.html
+++ b/events.html
@@ -61,7 +61,7 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-              <h1>Events and Tournaments</h1>  
+              <h1><u>Events and Tournaments</u></h1>  
 			  <p>The calendar for visual learners is at the bottom of this page. Scroll down to find it.
 			  <br>Times marked with Assorted Gaming indicate times during which the building/rooms will be open to the public.
 			  <br>Attendees are at liberty to entertain themselves during running tournaments once they have been eliminated or if they choose not to partake.
