--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>PLAN XXI - Home</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+       <meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
     <meta name="title" content="Web site" />
     <meta name="description" content="Site description here" />
     <meta name="keywords" content="keywords here" />
@@ -56,7 +61,7 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-              <h1>Welcome to the Wonderful Website of PLAN!!!</h1>  
+              <h1>Welcome to the Wonderful Website of PLAN!</h1>  
               <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">October 10th to October 12th</b> to have fun, play games and win prizes.</p>
 			  <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
               <h1>Announcements:</h1>
