--- a/forum.html
+++ b/forum.html
@@ -2,8 +2,13 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Events</title>
+    <title>PLAN XXI - Forum</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
+	    <meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="title" content="Web site" />
     <meta name="description" content="Site description here" />
