--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <meta name="copyright" content="Your company" />
     <meta name="abstract" content="Site description here" />
     <meta name="MSSmartTagsPreventParsing" content="true" />
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55172467-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <link id="theme" rel="stylesheet" type="text/css" href="style.css" title="theme" />
 <script type="text/javascript" language="javascript" src="js/addon.js"></script>
 <script type="text/javascript" language="javascript" src="js/custom.js"></script>
