--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ th, td {
     </td>		
   </tr>
     <tr>
+  	<td style="font-size:16px">9/26/2014</td>
+  	<td style="font-size:16px">BRING YOUR OWN ETHERNET CABLE or Use WiFi!</td>
+  </tr>
+    <tr>
     <td style="font-size:16px">9/22/2014</td>
     <td style="font-size:16px">Free Jimmy Johns Samples will be provided!</td>
     </td>		
