--- a/signup.html
+++ b/signup.html
@@ -61,9 +61,17 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-		<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="2473" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="777" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div> 
           </div>  
+          <h1>To Pay for PLAN Now, Click The Button Below:</h1>
+          <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=3DJ62UG5EPVP4" 
+    data-button="buynow" 
+    data-name="PLAN Admit One" 
+    data-amount="10.00" 
+    data-shipping="0.00" 
+    data-tax="0.00"
+></script>
           <div class="clear"></div> 
         </div>  
         <!-- end content -->  
