--- a/signup.html
+++ b/signup.html
@@ -61,10 +61,10 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-		<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="1377" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div> 
           </div>  
-          <h1>To Pay for PLAN Now, Click The Button Below:</h1>
+          <h1>To Pay for PLAN Now, Click The Button Below:<br></h1>
           <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=3DJ62UG5EPVP4" 
     data-button="buynow" 
     data-name="PLAN Admit One" 
