--- a/signup.html
+++ b/signup.html
@@ -65,6 +65,7 @@
             </div> 
           </div>  
           <h1>To Pay for PLAN Now, Click The Button Below:<br></h1>
+          <p style="text-align:center;">
           <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=3DJ62UG5EPVP4" 
     data-button="buynow" 
     data-name="PLAN Admit One" 
@@ -72,6 +73,7 @@
     data-shipping="0.00" 
     data-tax="0.00"
 ></script>
+</p>
           <div class="clear"></div> 
         </div>  
         <!-- end content -->  
