--- a/signup.html
+++ b/signup.html
@@ -64,7 +64,7 @@
 		<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="1377" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div> 
           </div>  
-          <h1>To Pay for PLAN Now, Click The Button Below:<br></h1>
+          <h1 style="text-align:center;">To Pay for PLAN Now, Click The Button Below:<br></h1>
           <p style="text-align:center;">
           <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=3DJ62UG5EPVP4" 
     data-button="buynow" 
