--- a/events.html
+++ b/events.html
@@ -97,7 +97,7 @@
 
 			  <p style="font-size:17px; color:#000000"><b>Super Smash Bros. Tournament</b></p>
 			  <p><b>WHEN:</b> Sunday, October 12, 2014 from 4pm EST until 9pm EST.
-			  <br><b>DETAILS:</b> Our Super Smash Bros. tournament is brought to you with the help of KZOO Smash.
+			  <br><b>DETAILS:</b> Our Super Smash Bros. tournament is brought to you with the help of <a href="https://www.facebook.com/kzoosmash" shape="rect" target="_blank">KZOO Smash</a>.
 			  <br>The tournament will be organized in a 1 vs. 1 bracket.
 			  </p>
 			  
