--- a/signup.html
+++ b/signup.html
@@ -73,6 +73,7 @@
     data-shipping="0.00" 
     data-tax="0.00"
 ></script>
+Pay Now and We'll Give You a WristBand When You Get to PLAN!
 </p>
           <div class="clear"></div> 
         </div>  
