--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ th, td {
   </tr>
    <tr>
   	<td style="font-size:16px">9/26/2014</td>
-  	<td style="font-size:16px">BRING YOUR OWN ETHERNET CABLE or Use WiFi!</td>
+  	<td style="font-size:16px">BRING YOUR OWN ETHERNET CABLE!</td>
   </tr>
   <tr>
     <td style="font-size:16px">9/23/2014</td>
