--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ th, td {
     <th style="font-size:23px">Date</th>
     <th style="font-size:23px">Announcement</th>		
   </tr>
+  <tr>
+  	<td style="font-size:16px">10/1/2014</td>
+  	<td style="font-size:16px">Raffle Prize is a $25.00 Gift Certificate to Sophia's House of Pancakes!</td>
+  </tr>
    <tr>
   	<td style="font-size:16px">9/26/2014</td>
   	<td style="font-size:16px">BRING YOUR OWN ETHERNET CABLE!</td>
