--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@ th, td {
     <th style="font-size:23px">Announcement</th>		
   </tr>
   <tr>
+  	<td style="font-size:16px">10/11/2014</td>
+  	<td style="font-size:16px">League Signup: http://challonge.com/tournaments/signup/1vIlShuX1V</td>
+  </tr>
+  <tr>
   	<td style="font-size:16px">10/1/2014</td>
   	<td style="font-size:16px">Raffle Prize is a $25.00 Gift Certificate to Sophia's House of Pancakes!</td>
   </tr>
