--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ th, td {
   </tr>
   <tr>
   	<td style="font-size:16px">10/11/2014</td>
-  	<td style="font-size:16px">League Signup: <a href="http://challonge.com/tournaments/signup/1vIlShuX1V"></a></td>
+  	<td style="font-size:16px">League Signup: <a href="http://challonge.com/tournaments/signup/1vIlShuX1V">Click Here!</a></td>
   </tr>
   <tr>
   	<td style="font-size:16px">10/1/2014</td>
