--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ th, td {
   </tr>
   <tr>
   	<td style="font-size:16px">10/11/2014</td>
-  	<td style="font-size:16px">League Signup: <a href="http://challonge.com/tournaments/signup/1vIlShuX1V">Click Here!</a></td>
+  	<td style="font-size:16px">League Players - Check Out (Or no prizes): <a href="https://docs.google.com/document/d/1Ia_xVkQvgRY7auctlPA8QOauEYLEwp8zmPbQ8ifC2d0/edit?usp=sharing">Click Here!</a></td>
   </tr>
   <tr>
   	<td style="font-size:16px">10/1/2014</td>
