update main page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Home</title>
+    <title>PLAN XXII - Home</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
        <meta http-equiv="cache-control" content="max-age=0" />
@@ -37,7 +37,7 @@
     <!-- top wrapper -->  
     <div id="topWrapper"> 
       <div id="topBanner">
-        <a href="http://www.ccowmu.org"><img src="./images/css/trans.png"></a>
+        <a href="http://yakko.cs.wmich.edu"><img src="./images/css/trans.png"></a>
 	<a href="./index.html"><img src="./images/css/transparent.png"></a>
 	</div> 
     </div>  
@@ -72,7 +72,7 @@
             <div class="clear"></div>  
             <div> 
               <h1>Welcome to the Wonderful Website of PLAN!!!</h1>  
-              <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">October 11th to October 12th</b> to have fun, play games and win prizes.</p>
+              <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">March 28th</b> to have fun, play games and win prizes.</p>
 			  <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
               <h1>Announcements:</h1>
               <style>
@@ -93,28 +93,10 @@ th, td {
     <th style="font-size:23px">Date</th>
     <th style="font-size:23px">Announcement</th>		
   </tr>
-  <tr>
-  	<td style="font-size:16px">10/11/2014</td>
-  	<td style="font-size:16px">League Players - Check Out (Or no prizes): <a href="https://docs.google.com/document/d/1Ia_xVkQvgRY7auctlPA8QOauEYLEwp8zmPbQ8ifC2d0/edit?usp=sharing">Click Here!</a></td>
-  </tr>
-  <tr>
-  	<td style="font-size:16px">10/1/2014</td>
-  	<td style="font-size:16px">Raffle Prize is a $25.00 Gift Certificate to Sophia's House of Pancakes!</td>
-  </tr>
    <tr>
-  	<td style="font-size:16px">9/26/2014</td>
+  	<td style="font-size:16px">2/16/2015</td>
   	<td style="font-size:16px">BRING YOUR OWN ETHERNET CABLE!</td>
-  </tr>
-  <tr>
-    <td style="font-size:16px">9/23/2014</td>
-    <td style="font-size:16px">League of Legend Tournaments & CS:GO Take Place simultaneously, don't sign up for both!
-    </td>		
-  </tr>
-    <tr>
-    <td style="font-size:16px">9/22/2014</td>
-    <td style="font-size:16px">Free Jimmy Johns Samples will be provided!</td>
-    </td>		
-  </tr>
+  </tr>	
 </table>
             </div>  
           </div>  
@@ -123,7 +105,7 @@ th, td {
         <!-- end content -->  
 		<div id="banner" class="slideshowContainer"> 
           <!-- put your slideshow images here -->  
-          <div class="slideshow"> 
+         <!-- <div class="slideshow"> 
 				<img src="./photos/1-600.jpg"/>
 				<img src="./photos/10269116_10102259676292512_2117706618979124502_o.jpg"/>
 				<img src="./photos/12-600.jpg"/>
@@ -283,7 +265,7 @@ th, td {
 				<img src="./photos/p6260032-600.jpg"/>
 				<img src="./photos/p6260033-600.jpg"/>
 				<img src="./photos/plan.jpg"/>
-          </div>  
+          </div>  -->
 		  <!--
           <div class="slideshowLeftCorner"></div>  
           <div class="slideshowRightCorner"></div>  
@@ -299,7 +281,7 @@ th, td {
         <div style="padding-top:20px; color: #CCCCCC"> 
 
  If You Want To Sponsor Us, Email Us: 
-          <a href="mailto:plan@ccowmu.org" shape="rect">plan@ccowmu.org</a>
+          <a href="mailto:plan@yakko.cs.wmich.edu" shape="rect">plan@yakko.cs.wmich.edu</a>
         </div> 
       </div> 
     </div> 
