plan site is under construction

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ th, td {
     <th style="font-size:23px">Date</th>
     <th style="font-size:23px">Announcement</th>		
   </tr>
+  <tr>
+	<td style="font-size:16px">2/16/2015</td>
+	<td style="font-size:16px">PLAN site is under construction...</td>
    <tr>
   	<td style="font-size:16px">2/16/2015</td>
   	<td style="font-size:16px">BRING YOUR OWN ETHERNET CABLE!</td>
