--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="title" content="Web site" />
-    <meta name="description" content="Site description here" />
-    <meta name="keywords" content="keywords here" />
+    <meta name="title" content="Parkview LAN Party" />
+    <meta name="description" content="The official website for PLAN, hosted by Computer Club at Western Michigan University." />
+    <meta name="keywords" content="Gaming,games,tournament,team fortress 2,league of legends,magic the gathering,PLAN,LAN Party,WMU,Computer Club" />
     <meta name="language" content="en" />
-    <meta name="subject" content="Site subject here" />
+    <meta name="subject" content="Gaming" />
     <meta name="robots" content="All" />
-    <meta name="copyright" content="Your company" />
-    <meta name="abstract" content="Site description here" />
+    <meta name="copyright" content="" />
+    <meta name="abstract" content="The official website for PLAN, hosted by Computer Club at Western Michigan University." />
     <meta name="MSSmartTagsPreventParsing" content="true" />
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
