--- a/events.html
+++ b/events.html
@@ -62,7 +62,9 @@
               <h1><u>Events and Tournaments</u></h1>  
 			  <p>Other rooms are available. Start your own tourney, game of cards against humanity, or watch a movie.</p>
 	   		  <p style="font-size:17px; color:#000000"><br><b>IMPORTANT: Tournaments will start when scheduled. Please arrive early to make sure you're signed in!</b></p>
-              		  <p>Sign-in and concessions will be located in the first floor hallway/cafeteria. Different tournaments are in different rooms. General gaming will be located in D-115.</p>
+              		  <p>Sign-in and concessions will be located in the first floor hallway/cafeteria.
+              		  <br>Different tournaments are in different rooms.
+              		  <br>General gaming will be located in D-115.</p>
 					  <!--<p style="font-size:17px; color:#000000"><br><b>The Leauge of Legends Tournament and the CS:GO Tournament will take place simultaneously. Sorry:( <br></b></p>-->
 			   <p style="font-size:17px; color:#000000"><b>League of Legends Tournament</b></p>
 			  <p><b>WHEN:</b> Saturday, March 28, 2015. 12pm - 7:30pm.
