--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
             <div class="clear"></div>  
             <div> 
               <h1>Welcome to the Wonderful Website of PLAN!!!</h1>  
-              <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">March 28th and March 29th</b> to have fun, play games and win prizes. Tickets are $10.</p>
-			  <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
+              <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">March 28th and March 29th</b>
+              to have fun, play games and win prizes.</p>
+              <p>Tickets are $10, but that is for the whole weekend! You can register for multiple tournaments as long as the times don't conflict.</p>
+	      <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
               <h1>Announcements:</h1>
               <style>
 table, th, td {
