--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
               <p>PLAN (Parkview LAN Party) is a semiannual LAN Party Hosted by the Computer Club of Western Michigan University at the Parkview Engineering Campus.<br>Join us <b style="font-size:15px">March 28th and March 29th</b>
               to have fun, play games and win prizes.</p>
               <p>Tickets are $10, but that is for the whole weekend! You can register for multiple tournaments as long as the times don't conflict.</p>
+	      <p>Information about each event/tournament can be found <a href="./events.html" shape="rect">here</a>.</p>
 	      <p style="font-size:23px"><a href="./signup.html" shape="rect">Click Here to Signup Now and Be Entered to Win a Raffle at PLAN!</a></p>
               <h1>Announcements:</h1>
               <style>
