--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@ th, td {
             </div>  
           </div>  
           <div class="clear"></div> 
+          <h1>Sponsors</h1>
         </div>  
         <!-- end content -->  
-		<div id="banner" class="slideshowContainer"> 
+	<div id="banner" class="slideshowContainer"> 
           <!-- put your slideshow images here -->  
          <!-- <div class="slideshow"> 
 				<img src="./photos/1-600.jpg"/>
@@ -275,7 +276,9 @@ th, td {
           <div class="slideshowRightCorner"></div>  
           <div class="slideshowBottom"></div> 
 		  -->
-        </div>  
+		  
+        </div> 
+        
       </div>  
       <!-- end container --> 
     </div> 
