--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ th, td {
             </div>  
           </div>  
           <div class="clear"></div> 
-          <h1>Sponsors</h1>
+          <h1>Sponsors:</h1>
+          <img src="./images/fanfare.png">
         </div>  
         <!-- end content -->  
 	<div id="banner" class="slideshowContainer"> 
